# nraoscistarter

./: file_monitor.py  how_to.txt  migrate_database.py  rfi_detector.py  routes.py  run_server.py  scistarter_api.py  setup_local.py
SDRSCI/: app.py  cjj.md  config.py  models.py  pyproject.toml  routes.py  run_server.py  setup_local.py  start_server.py
SDRSCI/attached_assets/: DEPLOYMENT_1755265461180.md  QUICK_START_1755265461183.md  SDR_SHARP_SETUP_1755265461187.md  _1755265461178.replit  app_1755265461179.py  cjj_1755265461184.md  models_1755265461182.py  pyproject_1755265461182.toml  routes_1755265461185.py  sdr_sharp_config_1755265461186.py
SDRSCI/instance/: spectrum_sentinels.db
SDRSCI/services/: file_processor.py  realtime_monitor.py  rfi_detector.py  scistarter_api.py  sdr_sharp_config.py
SDRSCI/static/css/: styles.css
SDRSCI/static/js/: realtime.js
SDRSCI/templates/: age_verification.html  base.html  heatmap.html  index.html  results.html  upload.html
SDRSCI2/: app.py  models.py  pyproject.toml  routes.py
SDRSCI2/attached_assets/: config_1755294616131.py  launch_optimized_sdr_1755294616131.bat  models_1755294616132.py  pyproject_1755294616132.toml  routes_1755294616133.py  run_server_1755294616133.py  sdr_sharp_config_1755294616134.json
SDRSCI2/services/: __init__.py  file_processor.py  realtime_monitor.py  rfi_detector.py  scistarter_api.py  sdr_sharp_config.py
SDRSCI2/static/css/: map-styles.css
SDRSCI2/static/js/: map-visualization.js
SDRSCI2/templates/: base.html  heatmap.html  index.html  results.html  upload.html
