[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-socketio>=5.5.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "waitress>=3.0.2",
    "watchdog>=6.0.0",
    "werkzeug>=3.1.3",
    "scipy>=1.16.1",
    "matplotlib>=3.10.5",
    "plotly>=6.3.0",
    "requests>=2.32.4",
    "numpy>=2.3.2",
    "bidict>=0.23.1",
]
